--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     font-size: 12px;
     color: darkgrey;
     margin: 0;
+    padding: 0 0 30px 0;
 }
 h1 {
     text-transform: uppercase;
@@ -61,6 +62,25 @@ footer {
     bottom: 0;
     width: 780px;
     padding: 5px 10px;
+}
+.top-item {
+}
+.top-place {
+    width: 10%;
+    display: block;
+    float: left;
+    clear: left;
+}
+.top-name {
+    width: 70%;
+    display: block;
+    float: left;
+    text-decoration: none;
+    color: darkgrey;
+}
+.top-total {
+    display: block;
+    float: left;
 }
 .row {
     display: flex;
@@ -218,6 +238,23 @@ footer {
     height: 5px;
     background-color: cornflowerblue;
     margin-bottom: 10px;
+}
+#welcome-message {
+    display: block;
+    width: 70%;
+    float: left;
+    clear: left;
+    margin: 0;
+    padding: 0;
+}
+#top-list {
+    display: block;
+    width: 30%;
+    float: right;
+    clear: right;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
 #categories {
     width: 100%;
