--- a/css/style.css
+++ b/css/style.css
@@ -1,293 +1,40 @@
-html {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-}
-header {
-    text-align: center;
-    font-size: 40px;
-}
-body {
-    font-size: 12px;
-    color: darkgrey;
-    margin: 0;
-    padding: 0 0 30px 0;
-}
-h1 {
-    text-transform: uppercase;
-}
-nav {
-    background-color: black;
-    overflow: hidden;
-}
-nav a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    display: block;
-    border: 5px solid black;
-    border-bottom-width: 0;
-}
 nav a:hover, nav a.active {
     background-color: cornflowerblue;
-}
-nav a#cart {
-    float: right;
-}
-label {
-    display: block;
-    float: left;
-    width: 15%;
-    clear: left;
-    margin: 5px 0;
-}
-input {
-    width: 45%;
-    float: left;
-    margin: 5px 0;
-}
-textarea {
-    width: 45%;
-    float: left;
-}
-footer {
-    background-color: black;
     color: white;
-    font-size: 10px;
-    text-align: right;
-    position: fixed;
-    bottom: 0;
-    width: 780px;
-    padding: 5px 10px;
 }
-.top-item {
-}
-.top-place {
-    width: 10%;
-    display: block;
-    float: left;
-    clear: left;
-}
-.top-name {
-    width: 70%;
-    display: block;
-    float: left;
-    text-decoration: none;
-    color: darkgrey;
-}
-.top-total {
-    display: block;
-    float: left;
-}
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-}
-.col {
-    flex: 25%;
-    padding: 0 4px;
-    box-sizing: border-box;
-}
-.tile {
-    width: 100%;
-    float: left;
-    box-sizing: border-box;
-    padding: 5px;
-}
-.tile:hover {
+article:hover {
     border: 1px solid lightgrey;
 }
-.tile-thumbnail {
-    width: 100%;
+footer {
+    font-size: 10px;
+    bottom: 0;
 }
-.tile-name {
-    clear: left;
-    float: left;
-    font-size: 14px;
-    font-weight: bold;
+#footer-line {
+    bottom: 22px;
 }
-.tile-price {
+.clear-left {
     clear: left;
-    float: left;
-    font-weight: bold;
+}
+@media (min-width: 768px) {
+    .clear-md-none {
+        clear: none;
+    }
+}
+.clear-right {
+    clear: right;
+}
+.clear-both {
+    clear: both;
+}
+.height-5 {
+    height: 5px;
+}
+.height-50 {
+    height: 50px;
 }
 .tile-order {
-    padding: 5px;
-    clear: left;
-    float: left;
-    width: 100%;
-    background-color: cornflowerblue;
-    text-decoration: none;
-    color: white;
     display: none;
-    border: none;
 }
 .tile:hover .tile-order {
     display: block;
-}
-.page-img {
-    float: right;
-    clear: right;
-    width: 50%;
-}
-.page-price {
-    float: left;
-    clear: left;
-    font-weight: bold;
-}
-.page-description {
-    text-align: justify;
-    clear: left;
-    display: block;
-    width: 48%;
-    margin: 0 0 5px;
-}
-.page-amount {
-    clear: left;
-    float: left;
-    width: 40px;
-    height: 20px;
-    border: cornflowerblue solid 2px;
-}
-.page-order {
-    padding: 5px;
-    width: 25%;
-    background-color: cornflowerblue;
-    text-decoration: none;
-    color: white;
-    border: none;
-}
-.cart-item {
-    width: 100%;
-    height: 20px;
-    display: block;
-    clear: left;
-    float: left;
-    padding: 5px 0;
-    font-size: 14px;
-}
-.cart-name {
-    float: left;
-    display: block;
-    font-weight: bolder;
-    width: 75%;
-    height: 100%;
-}
-.cart-amount {
-    float: left;
-    display: block;
-    width: 40px;
-    height: 100%;
-    margin: -5px 5px 0 0;
-    border: none;
-}
-.cart-price {
-    float: right;
-    text-align: right;
-    display: block;
-    width: 10%;
-    height: 100%;
-}
-.cart-order {
-    float: right;
-    clear: right;
-    display: block;
-    font-size: 12px;
-    height: 40px;
-    width: 30%;
-    transition-duration: 0.3s;
-    background-color: cornflowerblue;
-    text-decoration: none;
-    color: white;
-    border: none;
-}
-.update-prices {
-    float: left;
-    display: block;
-    font-size: 12px;
-    height: 20px;
-    width: 15%;
-    transition-duration: 0.3s;
-    background-color: black;
-    text-decoration: none;
-    color: white;
-    border: none;
-}
-.submit {
-    width: 100px;
-    height: 50px;
-    transition-duration: 0.3s;
-    background-color: cornflowerblue;
-    text-decoration: none;
-    color: white;
-    clear: left;
-    margin-left: 15%;
-    border: none;
-}
-.submit:hover {
-    background-color: white;
-    color: cornflowerblue;
-    border: solid medium cornflowerblue;
-}
-#nav-line {
-    width: 100%;
-    height: 5px;
-    background-color: cornflowerblue;
-    margin-bottom: 10px;
-}
-#welcome-message {
-    display: block;
-    width: 70%;
-    float: left;
-    clear: left;
-    margin: 0;
-    padding: 0;
-}
-#top-list {
-    display: block;
-    width: 30%;
-    float: right;
-    clear: right;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-#categories {
-    width: 100%;
-    margin: 0 0 5px 0;
-    display: block;
-}
-#cart-total {
-    float: right;
-    clear: right;
-    display: block;
-    font-size: 24px;
-}
-#form {
-    width: 100%;
-}
-#warning {
-    color: #800000;
-    float: left;
-    margin: 5px 0 5px 10px;
-}
-#alert {
-    display: block;
-    width: 100%;
-    border: medium solid #800000;
-    color: #800000;
-    text-align: center;
-    font-size: 15px;
-    margin: 10px 0 10px 0;
-}
-#footer-line {
-    position: fixed;
-    bottom: 22px;
-    width: 800px;
-    height: 5px;
-    background-color: cornflowerblue;
 }
